contributors after catalog

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -15,6 +15,10 @@
   "catalog": {
     "updated": "Catalog updated on {{date}}"
   },
+
+  "contributors": {
+    "title": "Contributors"
+  },
   "contacts": {
     "title": "Contact us directly",
     "email": "Email",
