--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -15,6 +15,9 @@
   "catalog": {
     "updated": "Каталог обновлён: {{date}}"
   },
+  "contributors": {
+    "title": "Помогли проекту"
+},
   "contacts": {
     "title": "Свяжитесь с нами",
     "email": "Электронная почта",
